--- a/Timeclock/Base.lproj/Main.storyboard
+++ b/Timeclock/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--Time Clock View Controller-->
+        <!--Time Clock Composite View Controller-->
         <scene sceneID="bQG-Vw-XRR">
             <objects>
-                <viewController id="9f7-cQ-qNF" customClass="TimeClockViewController" customModule="Timeclock" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9f7-cQ-qNF" customClass="TimeClockCompositeViewController" customModule="Timeclock" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Kgo-hG-ccl"/>
                         <viewControllerLayoutGuide type="bottom" id="uWq-kt-GiP"/>
@@ -75,8 +75,20 @@
                     <view key="view" contentMode="scaleToFill" id="MHg-YO-cPr">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="580"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Idle" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nf6-Le-log">
+                                <rect key="frame" x="279.5" y="274" width="42" height="33"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="Nf6-Le-log" firstAttribute="centerY" secondItem="MHg-YO-cPr" secondAttribute="centerY" id="SSm-Lf-sC6"/>
+                            <constraint firstItem="Nf6-Le-log" firstAttribute="centerX" secondItem="MHg-YO-cPr" secondAttribute="centerX" id="ZC6-6E-X3r"/>
+                        </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="qdg-Qy-duc" appends="YES" id="pi2-ej-ndc"/>
                         </connections>
@@ -89,7 +101,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1421" y="415"/>
+            <point key="canvasLocation" x="1421" y="413"/>
         </scene>
         <!--Capture View Controller-->
         <scene sceneID="2bv-MR-dCD">
@@ -102,7 +114,19 @@
                     <view key="view" contentMode="scaleToFill" id="QIC-VI-MAM">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="580"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Capturing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Io-vW-NYi">
+                                <rect key="frame" x="242" y="273.5" width="116" height="33"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="8Io-vW-NYi" firstAttribute="centerX" secondItem="QIC-VI-MAM" secondAttribute="centerX" id="5XI-2d-dec"/>
+                            <constraint firstItem="8Io-vW-NYi" firstAttribute="centerY" secondItem="QIC-VI-MAM" secondAttribute="centerY" id="WPt-sx-Q9Z"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TPa-h3-Rla" userLabel="First Responder" sceneMemberID="firstResponder"/>
